--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "^2.0.28",
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.41",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "@vitejs/plugin-vue": "^4.0.0",
@@ -25,6 +27,7 @@
     "prettier": "^2.8.2",
     "tailwindcss": "latest",
     "typescript": "^4.9.3",
+    "unplugin-icons": "^0.15.1",
     "vite": "^4.0.0",
     "vitest": "^0.27.0",
     "vue-tsc": "^1.0.11"
