--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-vue": "^9.8.0",
     "postcss": "latest",
     "prettier": "^2.8.2",
+    "sass": "^1.57.1",
     "tailwindcss": "latest",
     "typescript": "^4.9.3",
     "unplugin-icons": "^0.15.1",
