--- a/package.json
+++ b/package.json
@@ -11,21 +11,23 @@
     "coverage": "vitest --coverage"
   },
   "dependencies": {
-    "@vue/test-utils": "^2.2.7",
     "pinia": "^2.0.28",
     "vue": "^3.2.45"
   },
   "devDependencies": {
     "@iconify-json/mdi": "^1.1.41",
+    "@pinia/testing": "^0.0.14",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/test-utils": "^2.2.7",
     "autoprefixer": "latest",
     "eslint": "^8.31.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.8.0",
+    "happy-dom": "^8.1.3",
     "postcss": "latest",
     "prettier": "^2.8.2",
     "sass": "^1.57.1",
