--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://x8bitrain.github.io/temper-test",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "test": "cross-env MODE=test vitest",
-    "coverage": "vitest --coverage"
+    "test": "vitest",
+    "deploy": "yarn build && touch 'dist/.nojekyll' && gh-pages -t true -d dist"
   },
   "dependencies": {
     "pinia": "^2.0.28",
@@ -28,6 +29,7 @@
     "eslint": "^8.31.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.8.0",
+    "gh-pages": "^4.0.0",
     "happy-dom": "^8.1.3",
     "postcss": "latest",
     "prettier": "^2.8.2",
